Added button style

--- a/src/main/webapp/public/partials/main.html
+++ b/src/main/webapp/public/partials/main.html
@@ -9,7 +9,7 @@
     </div>
     <!-- <div id="map"></div> -->    
     <div>
-        <button id="search-button" ng-click="search()">Search</button>
+    	<button id="search-button" ng-click="search()" class="btn btn-large btn-inverse">Search<i class="yellow-icon-search"></i></button>
     </div>
 </div>
 
