--- a/src/main/webapp/public/partials/main.html
+++ b/src/main/webapp/public/partials/main.html
@@ -9,7 +9,34 @@
     </div>
     <!-- <div id="map"></div> -->    
     <div>
-    	<button id="search-button" ng-click="search()" class="btn btn-large btn-inverse">Search<i class="yellow-icon-search"></i></button>
+    	<button id="search-button" ng-click="search()" class="btn btn-inverse">Search<i class="yellow-icon-search"></i></button>
+    	<div class="btn-group">
+			<button class="btn">Kies voorgedefinieerd gebied ...</button>
+			<button class="btn dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+			<ul class="dropdown-menu">
+				<li><a href="#">Antwerpen centrum</a></li>
+				<li><a href="#">Belgische Kust</a></li>
+			</ul>
+		</div>
+		<div class="btn-group">
+			<button class="btn">Kies categorie ...</button>
+			<button class="btn dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+			<ul class="dropdown-menu">
+				<li><a href="#">restaurants</a></li>
+				<li><a href="#">artsen</a></li>
+				<li><a href="#">handelaars</a></li>
+				<li><a href="#">immobili‘n</a></li>
+				<li><a href="#">architecten</a></li>
+				<li><a href="#">kleding</a></li>
+				<li><a href="#">cafs</a></li>
+				<li><a href="#">juweliers</a></li>
+				<li><a href="#">bars</a></li>
+				<li><a href="#">evenementen</a></li>
+				<li><a href="#">banken</a></li>
+				<li><a href="#">garages</a></li>
+				<li><a href="#">advocaten</a></li>
+			</ul>
+		</div>
     </div>
 </div>
 
