--- a/src/main/webapp/public/partials/main.html
+++ b/src/main/webapp/public/partials/main.html
@@ -75,7 +75,7 @@
 	                <div class="row-fluid">
 	                    <div class="span12 larger-font black">
 							<i class="icon icon-large icon-map-marker"></i>
-							<span>{{business.address}}</span>
+							<span>{{business.address.street}} {{business.address.number}}, {{business.address.zipcode}} {{business.address.city}}</span>
 	                    </div>
 	                </div>
 	                <div class="row-fluid">
