--- a/src/main/webapp/public/partials/main.html
+++ b/src/main/webapp/public/partials/main.html
@@ -64,7 +64,7 @@
 	            <div class="list-item" ng-repeat="business in businesses">
 	                <div class="row-fluid">
 	                    <div class="span8">
-							<a href="#" class="heading"><span class="iconplaceholder">1.</span>{{business.name}}</a>
+							<a href="#" class="heading"><span class="iconplaceholder">{{$index + 1}}.</span>{{business.name}}</a>
 	                    </div>
 	                    <div class="span4 text-right">
 	                        <a href="#" class="attention"> <span>{{business.numberOfReviews}} reviews</span>
@@ -87,14 +87,9 @@
 							<span class="tags"><a ng-repeat="heading in business.headings">{{heading}}</a></span>
 	                    </div>
 	                </div>
-	                <div class="span12 list-footer">
-						<hr>
-						<div class=" row-fluid actions">
-							<div class="span8">
-								<a href="javascript:void(0);">Bookmark</a>
-								<a href="javascript:void(0);">Write a review</a>
-							</div>
-							<div class="span4 text-right"></div>
+	                <div class="row-fluid">
+						<div class="span12 list-footer">
+							<hr>
 						</div>
 					</div>
 	            </div>
