--- a/src/main/webapp/public/partials/main.html
+++ b/src/main/webapp/public/partials/main.html
@@ -24,10 +24,10 @@
 				<li><a href="#">restaurants</a></li>
 				<li><a href="#">artsen</a></li>
 				<li><a href="#">handelaars</a></li>
-				<li><a href="#">immobili‘n</a></li>
+				<li><a href="#">immobiliÃ«n</a></li>
 				<li><a href="#">architecten</a></li>
 				<li><a href="#">kleding</a></li>
-				<li><a href="#">cafs</a></li>
+				<li><a href="#">cafÃ©s</a></li>
 				<li><a href="#">juweliers</a></li>
 				<li><a href="#">bars</a></li>
 				<li><a href="#">evenementen</a></li>
@@ -68,7 +68,7 @@
 	                    </div>
 	                    <div class="span4 text-right">
 	                        <a href="#" class="attention"> <span>{{business.numberOfReviews}} reviews</span>
-								<span class="inline-block rating small rating4"><span></span></span>
+								<span class="inline-block rating small rating{{business.averageRating}}"><span>
 	                        </a>
 	                    </div>
 	                </div>
