--- a/src/main/webapp/public/partials/main.html
+++ b/src/main/webapp/public/partials/main.html
@@ -18,22 +18,22 @@
 			</ul>
 		</div>
 		<div class="btn-group">
-			<button class="btn">Kies categorie ...</button>
+			<button id="categoryButton" class="btn">Kies categorie ...</button>
 			<button class="btn dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
 			<ul class="dropdown-menu">
-				<li><a href="#">restaurants</a></li>
-				<li><a href="#">artsen</a></li>
-				<li><a href="#">handelaars</a></li>
-				<li><a href="#">immobiliën</a></li>
-				<li><a href="#">architecten</a></li>
-				<li><a href="#">kleding</a></li>
-				<li><a href="#">cafés</a></li>
-				<li><a href="#">juweliers</a></li>
-				<li><a href="#">bars</a></li>
-				<li><a href="#">evenementen</a></li>
-				<li><a href="#">banken</a></li>
-				<li><a href="#">garages</a></li>
-				<li><a href="#">advocaten</a></li>
+				<li><a href="#" ng-click="selectCategory('restaurants')">restaurants</a></li>
+				<li><a href="#" ng-click="selectCategory('artsen')">artsen</a></li>
+				<li><a href="#" ng-click="selectCategory('handelaars')">handelaars</a></li>
+				<li><a href="#" ng-click="selectCategory('immobiliën')">immobiliën</a></li>
+				<li><a href="#" ng-click="selectCategory('architecten')">architecten</a></li>
+				<li><a href="#" ng-click="selectCategory('kleding')">kleding</a></li>
+				<li><a href="#" ng-click="selectCategory('cafés')">cafés</a></li>
+				<li><a href="#" ng-click="selectCategory('juweliers')">juweliers</a></li>
+				<li><a href="#" ng-click="selectCategory('bars')">bars</a></li>
+				<li><a href="#" ng-click="selectCategory('evenementen')">evenementen</a></li>
+				<li><a href="#" ng-click="selectCategory('banken')">banken</a></li>
+				<li><a href="#" ng-click="selectCategory('garages')">garages</a></li>
+				<li><a href="#" ng-click="selectCategory('advocaten')">advocaten</a></li>
 			</ul>
 		</div>
     </div>
