--- a/src/main/webapp/public/partials/main.html
+++ b/src/main/webapp/public/partials/main.html
@@ -1,76 +1,45 @@
 
 
 <div class="row-fluid">
- 	<div id="panel">
-      <div id="color-palette"></div>
-      <div>
-        <button id="delete-button">Delete Selected Shape</button>
-      </div>      
-    </div>
+	 	<div id="panel">
+	      <div id="color-palette"></div>
+	      <div>
+	        <button id="delete-button">Delete Selected Shape</button>
+	      </div>      
+	    </div>
     <!-- <div id="map"></div> -->    
     <div>
     	<form class="form-search">
 		    <div class="controls">
 		        <select ng-model="myCoordinates"
-					ng-options="coordinates as name for (name, coordinates) in shapes">
-					<option></option>
+					ng-options="coordinates as name for (name, coordinates) in shapes" placeholder="Coordinates">
+					<option value="">Coordinates</option>
 				</select>
 				<select ng-model="myCategory"
-					ng-options="category as category for category in myCategories">
-					<option></option>
+					ng-options="category as category for category in myCategories" placeholder="Category">
+					<option value="">Category</option>
 				</select>
 		        <button id="search-button" ng-click="search()" class="btn btn-inverse btn-small" type="submit">Search<i class="yellow-icon-search"></i></button>
 		    </div>    
 		</form>
-    	
-    	<!-- <button id="search-button" ng-click="search()" class="btn btn-inverse">Search<i class="yellow-icon-search"></i></button>
-    	<div class="btn-group" >
-			<button class="btn">Kies voorgedefinieerd gebied ...</button>
-			<button class="btn dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
-			<ul class="dropdown-menu" ng-model="myCoordinates">
-				<li ng-repeat="(name, coordinates) in shapes"><a href="#">{{name}}</a></li>
-			</ul>
-		</div>
-		<div class="btn-group">
-			<button id="categoryButton" class="btn">Kies categorie ...</button>
-			<button class="btn dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
-			<ul class="dropdown-menu">
-				<li><a href="#" ng-click="selectCategory('restaurants')">restaurants</a></li>
-				<li><a href="#" ng-click="selectCategory('artsen')">artsen</a></li>
-				<li><a href="#" ng-click="selectCategory('handelaars')">handelaars</a></li>
-				<li><a href="#" ng-click="selectCategory('immobiliën')">immobiliën</a></li>
-				<li><a href="#" ng-click="selectCategory('architecten')">architecten</a></li>
-				<li><a href="#" ng-click="selectCategory('kleding')">kleding</a></li>
-				<li><a href="#" ng-click="selectCategory('cafés')">cafés</a></li>
-				<li><a href="#" ng-click="selectCategory('juweliers')">juweliers</a></li>
-				<li><a href="#" ng-click="selectCategory('bars')">bars</a></li>
-				<li><a href="#" ng-click="selectCategory('evenementen')">evenementen</a></li>
-				<li><a href="#" ng-click="selectCategory('banken')">banken</a></li>
-				<li><a href="#" ng-click="selectCategory('garages')">garages</a></li>
-				<li><a href="#" ng-click="selectCategory('advocaten')">advocaten</a></li>
-			</ul>
-		</div> -->
     </div>
 </div>
 
 <div class="row-fluid">
 	<!-- MAP -->
-    <div id="map" ui-map="myMap" class="span8"
-		style="height: 600px; margin: 3px;"
-		ui-options="mapOptions" ui-event="{'map-idle' : 'onMapIdle()'}">
+	<div class="span8">
+		<div class="row-fluid">
+		    <div id="map" ui-map="myMap" class="span12"
+				style="height: 600px; margin: 3px;"
+				ui-options="mapOptions" ui-event="{'map-idle' : 'onMapIdle()'}">
+			</div>
+		</div>
+		<div class="row-fluid">
+			<div style="background-image: url('/img/leaderboard.png'); height: 90px;" class="span12"></div>
+		</div> 
 	</div>
 	 	
 		<div id="resultList" style="height: 500px; margin: 3px;" class="span4">
-			<!-- 
-			<div id="header">
-				<h2>Shapes</h2>
-			</div>
-			<div class="row-fluid">
-                <table class="table table-hovered">
-                	<tr ng-repeat="(name, coordinates) in shapes"><td>{{name}}</td></tr>
-                </table>
-	        </div>
-	         -->
 			<div id="header">
 				<h2>Results</h2>
 			</div>
